--- a/src/widgets/input/input.css
+++ b/src/widgets/input/input.css
@@ -1,6 +1,14 @@
 
+.svInputInput {
+    border: none;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    margin: 0;
+    padding: 0;
+}
 
-.svInput {
+.svInputContainer {
     font-family: inherit;
     border: 1px solid #d9d9d9;
     border-radius: 4px;
@@ -20,11 +28,10 @@
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-.svInput:focus {
-    outline: 0;
+.focus {
     box-shadow: 0 0 0 2px rgba(16, 142, 233, .2);
 }
 
-.svInput:focus, .svInput:hover {
+.svInputContainer:focus, .svInputContainer:hover {
     border-color: #49a9ee;
 }
