修改：      * Input实现suffix属性；      * sv的组件采用box-sizing: border-box方式；

--- a/src/widgets/sv.css
+++ b/src/widgets/sv.css
@@ -18,6 +18,9 @@
   font-size: large;
 }
 
+:global(.sv *) {
+  box-sizing: border-box;
+}
 @keyframes AppLogoSpin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
