修改：   * 调整实现方式。

--- a/src/widgets/inputtag/css.css
+++ b/src/widgets/inputtag/css.css
@@ -1,7 +1,5 @@
 
 .hidden {
-    width: auto;;
-    white-space: nowrap;
-    position: fixed;
-    display: none;
+    position: absolute !important;
+    top: -943124px;
 }
