--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,215 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
+:global(.rc-trigger-popup) {
+    position: absolute;
+    left: -9999px;
+    top: -9999px;
+    z-index: 1050;
+}
+
+:global(.rc-trigger-popup-hidden) {
+    display: none;
+}
+
+:global(.rc-trigger-popup-zoom-enter,
+.rc-trigger-popup-zoom-appear) {
+    opacity: 0;
+    -webkit-animation-duration: 0.3s;
+    animation-duration: 0.3s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
+    animation-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
+    -webkit-animation-play-state: paused;
+    animation-play-state: paused;
+}
+
+:global(.rc-trigger-popup-zoom-leave) {
+    -webkit-animation-duration: 0.3s;
+    animation-duration: 0.3s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-timing-function: cubic-bezier(0.6, -0.3, 0.74, 0.05);
+    animation-timing-function: cubic-bezier(0.6, -0.3, 0.74, 0.05);
+    -webkit-animation-play-state: paused;
+    animation-play-state: paused;
+}
+
+:global(.rc-trigger-popup-zoom-enter.rc-trigger-popup-zoom-enter-active,
+.rc-trigger-popup-zoom-appear.rc-trigger-popup-zoom-appear-active) {
+    -webkit-animation-name: rcTriggerZoomIn;
+    animation-name: rcTriggerZoomIn;
+    -webkit-animation-play-state: running;
+    animation-play-state: running;
+}
+
+:global(.rc-trigger-popup-zoom-leave.rc-trigger-popup-zoom-leave-active ) {
+    -webkit-animation-name: rcTriggerZoomOut;
+    animation-name: rcTriggerZoomOut;
+    -webkit-animation-play-state: running;
+    animation-play-state: running;
+}
+
+@-webkit-keyframes: global(rcTriggerZoomIn) {
+    0% {
+        opacity: 0;
+        -webkit-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+        -webkit-transform: scale(0, 0);
+        transform: scale(0, 0);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+        -webkit-transform: scale(1, 1);
+        transform: scale(1, 1);
+    }
+}
+
+@keyframes: global(rcTriggerZoomIn) {
+    0% {
+        opacity: 0;
+        -webkit-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+        -webkit-transform: scale(0, 0);
+        transform: scale(0, 0);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+        -webkit-transform: scale(1, 1);
+        transform: scale(1, 1);
+    }
+}
+
+@-webkit-keyframes: global(rcTriggerZoomOut) {
+    0% {
+        opacity: 1;
+        -webkit-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+        -webkit-transform: scale(1, 1);
+        transform: scale(1, 1);
+    }
+    100% {
+        opacity: 0;
+        -webkit-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+        -webkit-transform: scale(0, 0);
+        transform: scale(0, 0);
+    }
+}
+
+@keyframes rcTriggerZoomOut {
+    0% {
+        opacity: 1;
+        -webkit-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+        -webkit-transform: scale(1, 1);
+        transform: scale(1, 1);
+    }
+    100% {
+        opacity: 0;
+        -webkit-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+        -webkit-transform: scale(0, 0);
+        transform: scale(0, 0);
+    }
+}
+
+:global(.rc-trigger-popup-mask) {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: #373737;
+    background-color: rgba(55, 55, 55, 0.6);
+    height: 100%;
+    filter: alpha(opacity=50);
+    z-index: 1050;
+}
+
+:global(.rc-trigger-popup-mask-hidden) {
+    display: none;
+}
+
+:global(.rc-trigger-popup-fade-enter,
+.rc-trigger-popup-fade-appear ) {
+    opacity: 0;
+    -webkit-animation-duration: 0.3s;
+    animation-duration: 0.3s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-timing-function: cubic-bezier(0.55, 0, 0.55, 0.2);
+    animation-timing-function: cubic-bezier(0.55, 0, 0.55, 0.2);
+    -webkit-animation-play-state: paused;
+    animation-play-state: paused;
+}
+
+.rc-trigger-popup-fade-leave {
+    -webkit-animation-duration: 0.3s;
+    animation-duration: 0.3s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-timing-function: cubic-bezier(0.55, 0, 0.55, 0.2);
+    animation-timing-function: cubic-bezier(0.55, 0, 0.55, 0.2);
+    -webkit-animation-play-state: paused;
+    animation-play-state: paused;
+}
+
+:global(.rc-trigger-popup-fade-enter.rc-trigger-popup-fade-enter-active,
+.rc-trigger-popup-fade-appear.rc-trigger-popup-fade-appear-active ) {
+    -webkit-animation-name: rcTriggerMaskFadeIn;
+    animation-name: rcTriggerMaskFadeIn;
+    -webkit-animation-play-state: running;
+    animation-play-state: running;
+}
+
+:global(.rc-trigger-popup-fade-leave.rc-trigger-popup-fade-leave-active) {
+    -webkit-animation-name: rcDialogFadeOut;
+    animation-name: rcDialogFadeOut;
+    -webkit-animation-play-state: running;
+    animation-play-state: running;
+}
+
+@-webkit-keyframes: global(rcTriggerMaskFadeIn) {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes: global(rcTriggerMaskFadeIn) {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes: global(rcDialogFadeOut) {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes: global(rcDialogFadeOut) {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
